Updated final data and report

--- a/dev1.ipynb
+++ b/dev1.ipynb
@@ -4774,7 +4774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 688,
+   "execution_count": 721,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4784,9 +4784,10 @@
     "    matching_indices = preds_series.index.intersection(Y_q_trf.index)\n",
     "    Y_selection = Y_q_trf.loc[matching_indices]\n",
     "    \n",
-    "    q1 = mse(Y_selection, preds_series['Q1'])\n",
-    "    q2 = mse(Y_selection, preds_series['Q2'])\n",
-    "    q3 = mse(Y_selection, preds_series['Q3'])\n",
+    "    # print(matching_indices)\n",
+    "    q1 = mse(Y_selection, preds_series['Q1'].loc[matching_indices])\n",
+    "    q2 = mse(Y_selection, preds_series['Q2'].loc[matching_indices])\n",
+    "    q3 = mse(Y_selection, preds_series['Q3'].loc[matching_indices])\n",
     "    \n",
     "    return q1, q2, q3\n",
     "\n",
@@ -4809,7 +4810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 689,
+   "execution_count": 717,
    "metadata": {},
    "outputs": [
     {
@@ -4844,7 +4845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 690,
+   "execution_count": 718,
    "metadata": {},
    "outputs": [
     {
@@ -4878,7 +4879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 691,
+   "execution_count": 731,
    "metadata": {},
    "outputs": [
     {
@@ -4895,6 +4896,10 @@
     }
    ],
    "source": [
+    "# Get the expanded MIDAS data\n",
+    "exp_cmidas_preds_series = pd.read_excel('MIDAS extra data_results2.xlsx', index_col=0)\n",
+    "exp_cmidas_preds_series = exp_cmidas_preds_series.resample('QE').ffill()\n",
+    "\n",
     "exp_autoreg_preds_series = create_df_from_preds(exp_autoreg_eval_results)\n",
     "exp_xgb_preds_series = create_df_from_preds(exp_xgb_forest_eval_results)\n",
     "exp_rnd_forest_preds_series = create_df_from_preds(exp_rnd_forest_eval_results)"
@@ -4902,16 +4907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 692,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get the expanded MIDAS data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 693,
+   "execution_count": 732,
    "metadata": {},
    "outputs": [
     {
@@ -4923,7 +4919,9 @@
       "XGBoost model results for 1q, 2q, and 3q ahead forecasts: - Expanded sample \n",
       " (4.556731499552121, 10.529930730456787, 9.73828230946709)\n",
       "Random Forest model results for 1q, 2q, and 3q ahead forecasts: - Expanded sample \n",
-      " (4.483575674725733, 6.007144786980533, 5.832051495757879)\n"
+      " (4.483575674725733, 6.007144786980533, 5.832051495757879)\n",
+      "C-MIDAS model results for 1q, 2q, and 3q ahead forecasts: - Expanded sample \n",
+      " (4.314341761669756, 6.384003880961632, 5.29020884563243)\n"
      ]
     },
     {
@@ -4939,12 +4937,12 @@
     "print('Autoregressive model results for 1q, 2q, and 3q ahead forecasts - Expanded sample: \\n', get_rmse_results(exp_autoreg_preds_series))\n",
     "print('XGBoost model results for 1q, 2q, and 3q ahead forecasts: - Expanded sample \\n', get_rmse_results(exp_xgb_preds_series))\n",
     "print('Random Forest model results for 1q, 2q, and 3q ahead forecasts: - Expanded sample \\n', get_rmse_results(exp_rnd_forest_preds_series))\n",
-    "# print('C-MIDAS model results for 1q, 2q, and 3q ahead forecasts: - Expanded sample \\n', get_rmse_results(midas_preds_series))"
+    "print('C-MIDAS model results for 1q, 2q, and 3q ahead forecasts: - Expanded sample \\n', get_rmse_results(exp_cmidas_preds_series))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 696,
+   "execution_count": 733,
    "metadata": {},
    "outputs": [
     {
@@ -4956,7 +4954,9 @@
       "XGBoost model results for 1q, 2q, and 3q ahead forecasts: - Expanded sample \n",
       " (0.6079912407168695, 0.6352867457119251, 0.6134507213368473)\n",
       "Random Forest model results for 1q, 2q, and 3q ahead forecasts: - Expanded sample \n",
-      " (0.29802656788916615, 0.3077609559670901, 0.3256869520829941)\n"
+      " (0.29802656788916615, 0.3077609559670901, 0.3256869520829941)\n",
+      "C-MIDAS model results for 1q, 2q, and 3q ahead forecasts: - Expanded sample \n",
+      " (0.2674124078586613, 0.24155998322507222, 0.23821461556184065)\n"
      ]
     }
    ],
@@ -4964,7 +4964,7 @@
     "print('Autoregressive model results for 1q, 2q, and 3q ahead forecasts - Expanded sample: \\n', get_rmse_results_pre2019Q3(exp_autoreg_preds_series))\n",
     "print('XGBoost model results for 1q, 2q, and 3q ahead forecasts: - Expanded sample \\n', get_rmse_results_pre2019Q3(exp_xgb_preds_series))\n",
     "print('Random Forest model results for 1q, 2q, and 3q ahead forecasts: - Expanded sample \\n', get_rmse_results_pre2019Q3(exp_rnd_forest_preds_series))\n",
-    "# print('C-MIDAS model results for 1q, 2q, and 3q ahead forecasts: - Expanded sample \\n', get_rmse_results(midas_preds_series))"
+    "print('C-MIDAS model results for 1q, 2q, and 3q ahead forecasts: - Expanded sample \\n', get_rmse_results_pre2019Q3(exp_cmidas_preds_series))"
    ]
   }
  ],
